--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,17 @@
     <artifactId>hibernate-core</artifactId>
     <version>4.3.6.Final</version>
 </dependency>
+<dependency>
+    
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>4.1.1.RELEASE</version>
+</dependency>
+<dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>4.1.1.RELEASE</version>
+ </dependency>
     <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
