--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,15 @@
             
     
     </dependency>
+    
+    <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-mapper-asl</artifactId>
+        <version>1.9.13</version>
+        <type>jar</type>
+        
+    </dependency>
   </dependencies>
-
   <build>
     <plugins>
       <plugin>
